; ModuleID = '/home/carl/AnghaBench/lwan/src/bin/lwan/extr_main.c_print_handler_info.c'
source_filename = "/home/carl/AnghaBench/lwan/src/bin/lwan/extr_main.c_print_handler_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lwan_handler_info = type { i8* }

@.str = private unnamed_addr constant [21 x i8] c"Available handlers:\0A\00", align 1
@__start_lwan_handler = common dso_local global %struct.lwan_handler_info* null, align 8
@__stop_lwan_handler = common dso_local global %struct.lwan_handler_info* null, align 8
@.str.1 = private unnamed_addr constant [7 x i8] c" * %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @print_handler_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_handler_info() #0 {
  %1 = alloca %struct.lwan_handler_info*, align 8
  %2 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  %3 = load %struct.lwan_handler_info*, %struct.lwan_handler_info** @__start_lwan_handler, align 8
  store %struct.lwan_handler_info* %3, %struct.lwan_handler_info** %1, align 8
  br label %4

4:                                                ; preds = %13, %0
  %5 = load %struct.lwan_handler_info*, %struct.lwan_handler_info** %1, align 8
  %6 = load %struct.lwan_handler_info*, %struct.lwan_handler_info** @__stop_lwan_handler, align 8
  %7 = icmp ult %struct.lwan_handler_info* %5, %6
  br i1 %7, label %8, label %16

8:                                                ; preds = %4
  %9 = load %struct.lwan_handler_info*, %struct.lwan_handler_info** %1, align 8
  %10 = getelementptr inbounds %struct.lwan_handler_info, %struct.lwan_handler_info* %9, i32 0, i32 0
  %11 = load i8*, i8** %10, align 8
  %12 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i8* %11)
  br label %13

13:                                               ; preds = %8
  %14 = load %struct.lwan_handler_info*, %struct.lwan_handler_info** %1, align 8
  %15 = getelementptr inbounds %struct.lwan_handler_info, %struct.lwan_handler_info* %14, i32 1
  store %struct.lwan_handler_info* %15, %struct.lwan_handler_info** %1, align 8
  br label %4

16:                                               ; preds = %4
  ret void
}

declare dso_local i32 @printf(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
